# ai-camp-note

./: .gitignore  AGENTS.md  README.md  SKILLS.md  agents.md  config.py  practice.ipynb  pyproject.toml  skills.md
content/: real_data.csv
skills/: api_clients.md  git_workflow.md  troubleshooting.md
week1/: README.md  week1.ipynb
week1/content/: bts_lyrics_top50.txt  인연.txt
week2/: README.md  fortune.py  menu.py  test.py  week2.py  week2_practice.py
week2/sql/: camping.sql  sql_practice.ipynb
week3/: README.md  nation_trade_client.py  naver_client.py  openapi_practice.ipynb  seoul_client.py  web_scraping_practice.ipynb
week3/content/: nation_trade_api.md  naver_api.md  seoul_api.md
week3/troubleshooting/: 2026-04-10.md  2026-04-13.md
week4/: 04-17.ipynb  04-20.ipynb  04-21.ipynb  04-22.ipynb  04-23.ipynb  04-24.ipynb  README.md
week4/troubleshooting/: 2026-04-17.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  cheat_sheet.md
week5/: 04-24.ipynb  04-27.ipynb  04-28.ipynb  04-29.ipynb  04-30.ipynb  README.md
week5/content/: airline_satisfaction_small.csv
week5/troubleshooting/: 2026-04-24.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md
week6/: 05-06.ipynb  05-07.ipynb  05-08.ipynb  README.md
week6/content/: result3.csv  titanic.csv
week6/troubleshooting/: 2026-05-06.md  2026-05-07.md  2026-05-08.md
week7/: 05-11.ipynb  05-12.ipynb  05-13.ipynb  05-14.ipynb  05-15.ipynb  README.md
week7/troubleshooting/: 2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md
week8/: 05-18.ipynb  README.md  __init__.py
week8/troubleshooting/: 2026-05-18.md
