[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-camp-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # week1
    "jpype1>=1.6.0",
    "jupyter>=1.1.1",
    "konlpy>=0.6.0",
    "wordcloud>=1.9.6",
    # week2
    "mysql-connector-python>=9.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    # week3
    "beautifulsoup4>=4.14.3",
    "folium>=0.20.0",
    "lyricsgenius>=3.11.0",
    "playwright>=1.58.0",
    "pydantic>=2.0.0",
    "pandera[pandas]>=0.13.0",
    "python-dotenv>=1.2.2",
    "xmltodict>=0.13.0",
    "requests>=2.32.5",
    # week4
    "numpy>=2.4.4",
    "matplotlib>=3.10.8",
    "plotly>=6.7.0",
    "notebook>=7.5.5",
    "nbformat>=5.10.4",
    "statsmodels>=0.14.6",
    # week5
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "imbalanced-learn>=0.14.1",
    "optuna>=4.8.0",
]

[tool.setuptools]
packages = ["week1", "week2", "week3", "week4", "week5"]
py-modules = ["config"]
